# goodpoints

./: .gitignore  MANIFEST.in  README.md  SUPPORT.md  push_to_pypi.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  pypi.yml
examples/compress/: construct_compresspp_coresets.py  construct_herding_coresets.py  construct_kt_coresets.py  construct_st_coresets.py  plot_compress_results.ipynb  run_time.py  script_to_deploy_jobs.ipynb  util_filenames.py  util_k_mmd.py  util_parse.py  util_sample.py
examples/debias/: .gitignore  README.md  tmux_spawn.py
examples/gkt/: compile_notebook.py  compute_test_function_errors.ipynb  plot_gkt_results.ipynb  run_generalized_kt_experiment.ipynb  submit_gkt_jobs.py  util_experiments.py  util_k_mmd.py  util_parse.py  util_sample.py
examples/kt/: compile_notebook.py  plot_results.ipynb  preprocess_mcmc_data.ipynb  run_kt_experiment.ipynb  submit_jobs_run_kt.py  util_k_mmd.py  util_sample.py
examples/mmd_test/: README.md  blobs_test.slurm  blobs_test_null.slurm  emnist_test.slurm  emnist_test_null.slurm  figures.py  gaussians_test.slurm  gaussians_test_null.slurm  (+9 more)
goodpoints/: __init__.py  compress.py  compressc.pyx  compressc_sob.pyx  ctt.py  cttc.pyx  gaussianc.pxd  gaussianc.pyx  herding.py  kt.py  ktc.pxd  ktc.pyx  sobolevc.pxd  sobolevc.pyx  tictoc.py  util.py
tests/: README.md  conftest.py  test_actt_advanced.py  test_compress.py  test_ctt.py  test_ctt_edge_cases.py  test_herding.py  test_integration.py  test_kernels.py  test_kt.py  test_lrctt_internals.py  test_mean0.py  test_properties.py
(+110 files in other folders)
