[metadata]
name = goodpoints
version = 0.3.5
description = Tools to generate concise high-quality summaries of a probability distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/goodpoints
license_files = LICENSE

[options]
packages =
    goodpoints
install_requires =
    numpy
